# diploma

./: .env  .env_docker  .env_example  .gitignore  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: action.yaml
1111111/: 01_docker.py  _description_.py
bot/: models.py  urls.py  views.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_chat_id_alter_tguser_user_and_more.py
bot/tg/: __init__.py  bot.py  client.py  dc.py
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  permissions.py  urls.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0002_goal_goalcomment.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py  0005_alter_goal_due_date.py
goals/models/: board.py  category.py  comment.py  goal.py  mixin.py
goals/serializers/: board.py  board_participant.py  category.py  comment.py
goals/views/: board.py  category.py  comment.py  filters.py  goal.py
pg_data/: postmaster.pid
pg_data/base/1/: 2619  2696  2840  2841  pg_internal.init
pg_data/base/5/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16384  16385  16391  16393  16394  16398  16400  16402  16403  16407  (+160 more)
pg_data/global/: 1260  1262  1262_vm  2671  2672  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
pg_data/pg_subtrans/: 0000
pg_data/pg_xact/: 0000
tests/: factories.py  fixtures.py
tests/goals/: boards_test.py  categories_test.py  comments_test.py  goals_test.py
todolist/: settings.py  urls.py
