[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Armen-ar <armen.aruts1967@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.1"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
